--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -113,7 +113,7 @@
                                         <span class=" spanColor input-group-text"><i
                                                 class=" myIcons <%= items.myObject.dish.formIngredientes[i].icon %>"></i></span>
                                     </div>
-                                    <% if (items.myObject.dish.formIngredientes[i].label === "Cantidad") { %>
+                                    <% if ((items.myObject.dish.formIngredientes[i].label === "Cantidad") || (items.myObject.dish.formIngredientes[i].label === "Quantity")) { %>
 
 
                                     <input class="MyInputs form-control"
@@ -172,7 +172,7 @@
                             <% if ( k > 0) { %>
                             <div class="col-sm">
                                 <input style="margin-top: 30px" class="btn btn-danger eliminar2" type="button"
-                                    value="Eliminar">
+                                    value="<%= items.myObject.eliminar %>">
                             </div>
                             <% } else{%>
                             <div class="col-sm"> </div>
@@ -188,7 +188,7 @@
                             class="required">*</span>
                     </div>
                     <br>
-                    <input type="button" class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
+                    <input type="button" class="btn btn-dark" value="<%= items.myObject.añadirIngred %>" id="bSubmit">
                 </div>
 
                 <script>
@@ -307,7 +307,7 @@
                         eliminar.classList.add("btn-danger");
                         eliminar.classList.add("eliminar");
                         eliminar.setAttribute("type", "button");
-                        eliminar.value = "Eliminar"
+                        eliminar.value = "<%= items.myObject.eliminar %>"
 
                         // col.style.display = "table";
                         eliminar.style.marginTop = "30px"
@@ -334,7 +334,7 @@
 
 
                 <br><br>
-                <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+                <input type="submit" id="mySubmit" class="btn btn-info" value="<%= items.myObject.submitButtom %>" />
 
                 <script>
                     $(function () {
