--- a/views/planification/InsertPlanification.ejs
+++ b/views/planification/InsertPlanification.ejs
@@ -160,7 +160,7 @@
 
                         myDiv.classList.add("cardInside2");
                         const mySpan = document.createElement("SPAN");
-                        mySpan.innerHTML = "Día: " + (i);
+                        mySpan.innerHTML = "<%=items.myObject.tablaPlanificacion.tablaDetalles[0] %>: " + (i);
                         const myDivMenu = document.createElement("DIV");
                         myDivMenu.style.marginTop = "5px";
                         myDivMenu.style.marginBottom = "20px";
