--- a/views/menu/insertMenu.ejs
+++ b/views/menu/insertMenu.ejs
@@ -108,7 +108,7 @@
                 </div>
 
                 <br>
-                <input type="button" class="btn btn-dark" value="Añadir plato" id="bSubmit">
+                <input type="button" class="btn btn-dark" value="<%= items.myObject.addDish %>" id="bSubmit">
 
 
 
@@ -185,7 +185,7 @@
                         eliminar.classList.add("btn-danger");
                         eliminar.classList.add("eliminar");
                         eliminar.setAttribute("type", "button");
-                        eliminar.value = "Eliminar"
+                        eliminar.value = "<%= items.myObject.eliminar %>"
                         col.style.display = "flex";
                         col.style["align-items"] = "center";
                         col.style["padding-top"] = "12px";
