--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -121,16 +121,37 @@
 </body>
 
 <script>
+    var ejsVal = "<%= items.myObject.idioma %>"
+
     $(document).ready(function () {
-        console.log("hello")
-        $('#platos').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple"
-        });
+
+        if (ejsVal === "esp") {
+            $('#platos').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#platos').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+    // $(document).ready(function () {
+    //     console.log("hello")
+    //     $('#platos').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple"
+    //     });
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
