--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -32,14 +32,14 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    
-     <!-- JS, Popper.js, and jQuery -->
+
+    <!-- JS, Popper.js, and jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 
 
@@ -102,7 +102,8 @@
                                                 class=" myIcons <%= items.myObject.dish.formIngredientes[i].icon %>"></i></span>
                                     </div>
                                     <% if ((items.myObject.dish.formIngredientes[i].label === "Cantidad")  || (items.myObject.dish.formIngredientes[i].label === "Quantity")){ %>
-                                    <input class="MyInputs form-control" type="<%= items.myObject.dish.formIngredientes[i].type %>"
+                                    <input class="MyInputs form-control"
+                                        type="<%= items.myObject.dish.formIngredientes[i].type %>"
                                         placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
                                         aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
                                         aria-describedby="basic-addon1"
@@ -110,7 +111,7 @@
                                         min=<%= items.myObject.dish.formIngredientes[i].min %> required>
                                     <%  } else { %>
                                     <input class="MyInputs searchIngredient form-control"
-                                        type="<%= items.myObject.dish.formIngredientes[i].type %>" 
+                                        type="<%= items.myObject.dish.formIngredientes[i].type %>"
                                         placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
                                         aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
                                         aria-describedby="basic-addon1"
@@ -361,12 +362,19 @@
                     <% for (var i=0; i< items.myDocs.length; i++) { %>
                     <tr>
                         <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
-                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
-                        <td> - </td>
-                        <% } else { %>
-                        <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
-                        <% } %>
-                        <% } %>
+                            <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
+                            <td> - </td>
+                            <% } else { %>
+                            <% if ((items.myObject.tablaAlimentos.nombres[j]) === "Sal (g)") { %>
+                            <td> <%= ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]])/1000) %> </td>
+                            <% } else if ((items.myObject.tablaAlimentos.nombres[j]) === "Colesterol (g)") { %>
+                                <td> <%= ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]])/1000) %> </td>
+                            <% } else{ %>
+                            <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                            <% }  %>
+    
+                            <% } %>
+                            <% } %>
                     </tr>
                     <% } %>
                 </tbody>
@@ -384,16 +392,37 @@
 </body>
 
 <script>
-    $(document).ready(function () {
-        $('#alimentos').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple"
-        });
+    var ejsVal = "<%= items.myObject.idioma %>"
 
+    $(document).ready(function () {
+
+        if (ejsVal === "esp") {
+            $('#alimentos').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#alimentos').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+    // $(document).ready(function () {
+    //     $('#alimentos').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple"
+    //     });
+
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
