--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -444,16 +444,38 @@
 
 
 <script>
-    $(document).ready(function () {
-        $('#alimentos').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple"
-        });
+    var ejsVal = "<%= items.myObject.idioma %>"
 
+    $(document).ready(function () {
+
+        if (ejsVal === "esp") {
+            $('#alimentos').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#alimentos').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+
+    // $(document).ready(function () {
+    //     $('#alimentos').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple"
+    //     });
+
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
