--- a/views/planification/getPlanification.ejs
+++ b/views/planification/getPlanification.ejs
@@ -151,15 +151,38 @@
 
 </body>
 <script>
+
+    var ejsVal = "<%= items.myObject.idioma %>"
+
     $(document).ready(function () {
-        $('#planification').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple",
-        });
+
+        if (ejsVal === "esp") {
+            $('#planification').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#planification').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+
+    // $(document).ready(function () {
+    //     $('#planification').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple",
+    //     });
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
