--- a/views/planification/insertPlanification.ejs
+++ b/views/planification/insertPlanification.ejs
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
@@ -22,7 +22,7 @@
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
- 
+
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -35,12 +35,12 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-            <!-- JQUERY AUTOCOMPLETE -->
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- JQUERY AUTOCOMPLETE -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 
@@ -167,9 +167,9 @@
                         myIMenus = document.createElement("INPUT")
                         myIMenus.setAttribute("type", "number");
                         myLabelMenus = document.createElement("LABEL")
-                        myLabelMenus.innerHTML = "Introduce el número de menús:";
+                        myLabelMenus.innerHTML = "<%=items.myObject.planificacion.dinLabel %>";
                         myLabelMenus.classList.add("required2")
-                        myIMenus.setAttribute("placeholder", "Número de menús ");
+                        myIMenus.setAttribute("placeholder", "<%=items.myObject.planificacion.numberMenu %>");
                         myIMenus.setAttribute("name", "menuDays[]");
                         myIMenus.setAttribute("min", 1);
                         myIMenus.required = true;
@@ -326,7 +326,7 @@
 
 
         </form>
-<br>
+        <br>
 
         <% const  nombres_sz=  items.myObject.tablaMenusReducida.nombres.length %>
         <% const  nombres=  items.myObject.tablaMenusReducida.nombres %>
@@ -334,37 +334,37 @@
         <% const  docs =   items.myDocs %>
 
         <div class="cardInside3">
-        <table id="planification" class="table table-bordered table-striped table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
+            <table id="planification" class="table table-bordered table-striped table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th scope="col"><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= docs[i]._id %> </td>
+                        <td>
+                            <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                            <%=docs[i].dishes[j]._id%>
+
+                            <% if( (j+1) < docs[i].dishes.length) {  %>
+                            <%= "|   "  %>
+                            <% } %>
+
+                            <% } %>
+                        <td><%= items.myNutrientsMenu[i][1] %> </td>
+
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td>
-                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                        <%=docs[i].dishes[j]._id%>
+                </tbody>
+            </table>
 
-                        <% if( (j+1) < docs[i].dishes.length) {  %>
-                        <%= "|   "  %>
-                        <% } %>
-
-                        <% } %>
-                    <td><%= items.myNutrientsMenu[i][1] %> </td>
-
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
-
-    </div>
+        </div>
         <br>
-</div>
+    </div>
     <%- include ("../partials/footer.ejs"); %>
 
 
@@ -372,16 +372,38 @@
 </body>
 
 <script>
-    $(document).ready(function () {
-        $('#planification').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple",
-        });
+    var ejsVal = "<%= items.myObject.idioma %>"
 
+    $(document).ready(function () {
+
+        if (ejsVal === "esp") {
+            $('#planification').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#planification').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+
+    // $(document).ready(function () {
+    //     $('#planification').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple",
+    //     });
+
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
