--- a/views/planification/updatePlanification.ejs
+++ b/views/planification/updatePlanification.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
-       <!-- JQUERY AUTOCOMPLETE -->
+    <!-- JQUERY AUTOCOMPLETE -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -36,14 +36,14 @@
         crossorigin="anonymous"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
- 
-    
+
+
 
 
 
@@ -445,16 +445,38 @@
 </body>
 
 <script>
-    $(document).ready(function () {
-        $('#planification').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple"
-        });
+    var ejsVal = "<%= items.myObject.idioma %>"
 
+    $(document).ready(function () {
+
+        if (ejsVal === "esp") {
+            $('#planification').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        } else {
+            $('#planification').DataTable({
+                "language": {
+                    "emptyTable": " "
+                },
+                "pagingType": "simple",
+            });
+        }
     });
+
+    // $(document).ready(function () {
+    //     $('#planification').DataTable({
+    //         "language": {
+    //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    //             "emptyTable": " "
+    //         },
+    //         "pagingType": "simple"
+    //     });
+
+    // });
 </script>
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
