--- a/views/recomendation/recomendationView.ejs
+++ b/views/recomendation/recomendationView.ejs
@@ -97,11 +97,11 @@
                         <% if ((items.req.user.rol === "default") || (items.req.user.rol === "cocinero") ){ %>
                         <td>
                             <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                href="/recomendation/<%=items.myDocs[i]['_id']%>"><i
-                                    class="fas fa-search-plus"></i></a></button> 
-                                    <button type="button" class="btn btn-success"><a title="Descargar"
-                                        href="/recomendation/download/<%=items.myDocs[i]['_id']%>"><i
-                                            class="far fa-file-alt"></i></a></button></td>
+                                    href="/recomendation/<%=items.myDocs[i]['_id']%>"><i
+                                        class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Descargar"
+                                    href="/recomendation/download/<%=items.myDocs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
 
                         <% } else{ %>
 
@@ -135,16 +135,39 @@
     <%- include ("../partials/footer.ejs"); %>
 
     <script>
-        $(document).ready(function () {
-            $('#recomendation').DataTable({
-                "language": {
-                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                    "emptyTable": " "
-                },
-                "pagingType": "simple",
-            });
 
+        var ejsVal = "<%= items.myObject.idioma %>"
+
+        $(document).ready(function () {
+
+            if (ejsVal === "esp") {
+                $('#recomendation').DataTable({
+                    "language": {
+                        "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                        "emptyTable": " "
+                    },
+                    "pagingType": "simple",
+                });
+            } else {
+                $('#recomendation').DataTable({
+                    "language": {
+                        "emptyTable": " "
+                    },
+                    "pagingType": "simple",
+                });
+            }
         });
+        // $(document).ready(function () {
+        //     $('#recomendation').DataTable({
+        //         "language": {
+        //             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+        //             "emptyTable": " "
+        //         },
+        //         "pagingType": "simple",
+        //     });
+
+        // });
+        
     </script>
     <!-- BOOTSTRAP TABLE -->
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
