Corrigiendo error en recomendation y traducciones

--- a/views/evaluation/createEvaluation.ejs
+++ b/views/evaluation/createEvaluation.ejs
@@ -71,9 +71,9 @@
 
                         <select required id="recomendacion" class="mySelects form-control"
                             name="<%= items.myObject.evaluacion.recomendacion[i].name %>">
-                            <% for (var j=0; j< items.myRecomendations.length; j++) { %>
-                            <option value="<%= items.myRecomendations[j]["_id"] %>">
-                                <%= items.myRecomendations[j]["_id"] %> </option>
+                            <% for (var j=0; j< items.myRecommendations.length; j++) { %>
+                            <option value="<%= items.myRecommendations[j]["_id"] %>">
+                                <%= items.myRecommendations[j]["_id"] %> </option>
                             <% } %>
                         </select>
                     </div>
