--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -99,7 +99,7 @@
                         <td>
                             <button type="button" class="btn btn-info"><a title="Ver detalles"
                                     href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Editar"
+                            <button type="button" class="btn btn-success"><a title="Descargar"
                                     href="/menu/download/<%=docs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
                         <% } else{ %>
@@ -110,7 +110,7 @@
                                     href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
                             <button type="button" class="btn btn-warning"><a title="Editar"
                                     href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Editar"
+                            <button type="button" class="btn btn-success"><a title="Descargar"
                                     href="/menu/download/<%=docs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
 
