--- a/views/menu/insertMenu.ejs
+++ b/views/menu/insertMenu.ejs
@@ -108,7 +108,7 @@
                 </div>
 
                 <br>
-                <input type="button" class="btn btn-dark" value="<%= items.myObject.addDish %>" id="bSubmit">
+                <input type="button" class="btn btn-dark" value="<%= items.myObject.añadirDish %>" id="bSubmit">
 
 
 
