--- a/views/recommendation/insertRecommendationJson.ejs
+++ b/views/recommendation/insertRecommendationJson.ejs
@@ -56,7 +56,7 @@
         <div class="cardJson">
             <br>
 
-            <p class="ejemplo"><%= items.myObject.jsonRecomendation.ejemplo %></p>
+            <p class="ejemplo"><%= items.myObject.jsonRecommendation.ejemplo %></p>
             <div class="d-flex justify-content-center align-items-center p-3 texto">
                 <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
             </div>
@@ -67,7 +67,7 @@
 
                     <br> <br>
                     <i class="fas fa-file-upload fa-3x m-auto text-info">
-                        <label for="avatar"><%= items.myObject.jsonRecomendation.label %></label><br></i>
+                        <label for="avatar"><%= items.myObject.jsonRecommendation.label %></label><br></i>
                     <br> <br>
 
                     <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
