--- a/views/recommendation/recommendationView.ejs
+++ b/views/recommendation/recommendationView.ejs
@@ -70,7 +70,7 @@
 
 
         <div class="cardInside3">
-            <table id="recomendation" class="table table-bordered table-hover table-sm">
+            <table id="recommendation" class="table table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                     <tr>
 
@@ -97,25 +97,25 @@
                         <% if ((items.req.user.rol === "default") || (items.req.user.rol === "cocinero") ){ %>
                         <td>
                             <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/recomendation/<%=items.myDocs[i]['_id']%>"><i
+                                    href="/recommendation/<%=items.myDocs[i]['_id']%>"><i
                                         class="fas fa-search-plus"></i></a></button>
                             <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/recomendation/download/<%=items.myDocs[i]['_id']%>"><i
+                                    href="/recommendation/download/<%=items.myDocs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
 
                         <% } else{ %>
 
                         <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
-                                    href="/recomendation/delete/<%=items.myDocs[i]['_id']%>"> <i
+                                    href="/recommendation/delete/<%=items.myDocs[i]['_id']%>"> <i
                                         class="fas fa-trash-alt"></i></a></button><br>
                             <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/recomendation/<%=items.myDocs[i]['_id']%>"><i
+                                    href="/recommendation/<%=items.myDocs[i]['_id']%>"><i
                                         class="fas fa-search-plus"></i></a></button> <br>
                             <button type="button" class="btn btn-warning"><a title="Editar"
-                                    href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i
+                                    href="/recommendation/update/<%=items.myDocs[i]['_id']%>"><i
                                         class="fas fa-edit"></i></a></button> <br>
                             <button type="button" class="btn btn-success"><a title="Descargar"
-                                    href="/recomendation/download/<%=items.myDocs[i]['_id']%>"><i
+                                    href="/recommendation/download/<%=items.myDocs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
                         </td>
                         <% } %>
@@ -141,7 +141,7 @@
         $(document).ready(function () {
 
             if (ejsVal === "esp") {
-                $('#recomendation').DataTable({
+                $('#recommendation').DataTable({
                     "language": {
                         "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
                         "emptyTable": " "
@@ -149,7 +149,7 @@
                     "pagingType": "simple",
                 });
             } else {
-                $('#recomendation').DataTable({
+                $('#recommendation').DataTable({
                     "language": {
                         "emptyTable": " "
                     },
