--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -278,7 +278,7 @@ h1 {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.jumbotronRecomendation {
+.jumbotronRecommendation {
   min-height: 400px;
   display: flex;
   justify-content: center;
@@ -291,13 +291,13 @@ h1 {
   background-attachment: scroll;
 }
 
-.recomendation {
+.recommendation {
   min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
 
-.jumbotronRecomendation {
+.jumbotronRecommendation {
   min-height: 400px;
   display: flex;
   justify-content: center;
@@ -310,7 +310,7 @@ h1 {
   background-attachment: scroll;
 }
 
-.recomendation {
+.recommendation {
   min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
