--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -92,7 +92,7 @@
                         <td>
                             <button type="button" class="btn btn-info"><a title="Ver detalles"
                                     href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Editar"
+                            <button type="button" class="btn btn-success"><a title="Descargar"
                                     href="/dish/download/<%=docs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button>
                         </td>
@@ -105,7 +105,7 @@
                                     href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
                             <button type="button" class="btn btn-warning"><a title="Editar"
                                     href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
-                            <button type="button" class="btn btn-success"><a title="Editar"
+                            <button type="button" class="btn btn-success"><a title="Descargar"
                                     href="/dish/download/<%=docs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
                         <% } %>
