--- a/views/menu/updateMenu.ejs
+++ b/views/menu/updateMenu.ejs
@@ -139,7 +139,7 @@
 
                 </div>
                 <br>
-                <input type="button" class="btn btn-dark" value="<%= items.myObject.addDish %>" id="bSubmit">
+                <input type="button" class="btn btn-dark"  value="<%= items.myObject.añadirDish %>" id="bSubmit">
 
 
 
